<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activities.List.ListActivity">
    <item
        android:id="@+id/menu_principal_settings"
        android:orderInCategory="100"
        android:title="@string/menu_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_lista_salir"
        android:orderInCategory="100"
        android:title="@string/lista_abandonar"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_lista_vaciar"
        android:orderInCategory="100"
        android:title="@string/lista_vaciar"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_lista_eliminar"
        android:orderInCategory="100"
        android:title="@string/lista_eliminar"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_lista_invitar"
        android:orderInCategory="100"
        android:title="@string/lista_invitar"
        app:showAsAction="never" />

</menu>