<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:id="@+id/completed_view"
    android:weightSum="1">

    <TextView
        android:text="@string/lista_completed_title"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:theme="@style/Copralia.Title"
        android:layout_weight="0.11" />

    <ImageView
        android:layout_width="200dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/buy_view"
        android:layout_height="200dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/lista_completed_desc"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:paddingTop="10dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        android:layout_marginTop="15dp">

        <Button
            android:text="@string/lista_completed_ver"
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/list_completed_ver"
            />

        <Button
            android:text="@string/lista_completed_vaciar"
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/list_completed_vaciar"
            />
    </LinearLayout>


</LinearLayout>