<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:background="#fff">

            <!--  Header  Starts-->
            <LinearLayout android:id="@+id/header"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/primaryColor"
                android:paddingTop="5dip"
                android:paddingBottom="5dip">
                <!-- Logo Start-->
                <ImageView android:src="@drawable/logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"/>
                <!-- Logo Ends -->
            </LinearLayout>
            <!--  Header Ends -->


            <!-- Registration Form -->
            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dip"
                android:layout_below="@id/header">
                <!-- Full Name Label -->
                <TextView android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#372c24"
                    android:text="@string/registro_nombre"/>
                <EditText android:id="@+id/registro_nombre"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:singleLine="true"
                    android:layout_marginBottom="20dip"/>
                <!--  Email Label -->
                <TextView android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#372c24"
                    android:text="Email"/>
                <EditText android:id="@+id/registro_email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:singleLine="true"
                    android:layout_marginBottom="20dip"/>
                <!-- Password Label -->
                <TextView android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#372c24"
                    android:text="@string/registro_pass"/>
                <EditText android:id="@+id/registro_pass"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:password="true"
                    android:singleLine="true"
                    android:layout_marginTop="5dip"/>
                <!-- Register Button -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="Small Text"
                    android:id="@+id/registro_text"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/errorColor"
                    android:visibility="gone" />

                <Button android:id="@+id/registro_button"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:text="@string/registro_button"/>
                <!-- Link to Login Screen -->
                <TextView android:id="@+id/registro_link"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dip"
                    android:layout_marginBottom="40dip"
                    android:text="@string/registro_login"
                    android:gravity="center"
                    android:textSize="20dip"
                    android:textColor="@color/linkColor"/>

            </LinearLayout>
            <!-- Registration Form Ends -->


        </RelativeLayout>
    </ScrollView>


</LinearLayout>